<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_enter_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/amount_to_convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/amount_to_convert"
        app:srcCompat="@drawable/ic_amount" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_to_convert"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:hint="@string/enter_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_to_convert_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/icon_convert_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/convert"
        app:srcCompat="@drawable/ic_convertfrom" />

    <TextView
        android:id="@+id/convert"
        style="@style/Widget.FoodUnitConverter.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose_desired_unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_to_convert" />

    <RadioGroup
        android:id="@+id/convert_option"
        style="@style/Widget.FoodUnitConverter.CompoundButton.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/option_kg1_to_gm"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert">

        <RadioButton
            android:id="@+id/option_kg1_to_gm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg_to_gram" />

        <RadioButton
            android:id="@+id/option_gm1_to_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gram_to_kg" />
        <RadioButton
            android:id="@+id/option_gm1_to_milligrams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GM to mg" />

        <RadioButton
            android:id="@+id/option_mg_to_gm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mg to GM" />
    </RadioGroup>





    <ImageView
        android:id="@+id/icon_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_up_switch"
        app:srcCompat="@drawable/ic_roundupvalue" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_switch"
        style="@style/Widget.FoodUnitConverter.CompoundButton.Switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:checked="true"
        android:text="@string/round_up_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_option"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Button
        android:id="@+id/convert_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_up_switch" />

    <TextView
        android:id="@+id/convert_result"
        style="@style/Widget.FoodUnitConverter.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_button"
        tools:text="Desired Amount: 12" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>